# flappy_bird

./: .gitignore  meson.build  meson.options
src/: config.hpp  flappy_bird.cpp
subprojects/: raylib.wrap
subprojects/packagefiles/raylib/: meson.build
